# core-vault

./: Dockerfile  NORTH_STAR.md  pyproject.toml
docs/prompts/: CORE_VAULT.md
src/core_vault/: __init__.py  client.py  config.py  exceptions.py
tests/unit/: test_client.py
